test/testdata/classes/methods/init/missing_1_arg_error.lox
class Foo {
  init(a, b) {
    print a + b;
  }
}

Foo(1); // error: Foo.init() accepts 2 arguments but 1 was given
